// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Wave 0 golden — computeSystem legacy MICRO (20 × IQ8+, roof) > acBranchCount + key aggregates match the pre-contract snapshot 1`] = `
{
  "acBranchCount": 2,
  "acBranchCurrentA": 12.08,
  "acBranchOcpdAmps": 20,
  "acContinuousCurrentA": 30.208333,
  "acOcpdAmps": 35,
  "acOutputCurrentA": 24.166667,
  "backfeedBreakerAmps": 35,
  "dcAcRatio": 1.448276,
  "errorCount": 0,
  "interconnectionPass": true,
  "isValid": true,
  "microDeviceCount": 20,
  "panelsPerString": 20,
  "rooftopTempAdderC": 30,
  "stringCount": 1,
  "topology": "MICROINVERTER",
  "totalAcKw": 5.8,
  "totalDcKw": 8.4,
  "totalPanels": 20,
}
`;

exports[`Wave 0 golden — computeSystem legacy MICRO (20 × IQ8+, roof) > per-run {id, gauge, lengthFt, conductors} matches the pre-contract snapshot 1`] = `
[
  {
    "conductors": 4,
    "gauge": "#10 AWG",
    "id": "ROOF_RUN",
    "lengthFt": 30,
  },
  {
    "conductors": 2,
    "gauge": "#10 AWG",
    "id": "BRANCH_RUN",
    "lengthFt": 50,
  },
  {
    "conductors": 3,
    "gauge": "#10 AWG",
    "id": "COMBINER_TO_DISCO_RUN",
    "lengthFt": 20,
  },
  {
    "conductors": 3,
    "gauge": "#10 AWG",
    "id": "DISCO_TO_METER_RUN",
    "lengthFt": 15,
  },
  {
    "conductors": 3,
    "gauge": "#2/0 AWG",
    "id": "MSP_TO_UTILITY_RUN",
    "lengthFt": 5,
  },
]
`;

exports[`Wave 0 golden — computeSystem legacy MICRO (20 × IQ8+, roof) > runs[] id set is the bare legacy set (no subsystem prefixes) 1`] = `
[
  "ROOF_RUN",
  "BRANCH_RUN",
  "COMBINER_TO_DISCO_RUN",
  "DISCO_TO_METER_RUN",
  "MSP_TO_UTILITY_RUN",
]
`;

exports[`Wave 0 golden — computeSystem legacy STRING (7.6 kW Fronius, 2×10, roof) > acBranchCount (0 for string) + key aggregates match the pre-contract snapshot 1`] = `
{
  "acBranchCount": 0,
  "acBranchCurrentA": 0,
  "acBranchOcpdAmps": 0,
  "acContinuousCurrentA": 39.583333,
  "acOcpdAmps": 40,
  "acOutputCurrentA": 31.666667,
  "backfeedBreakerAmps": 40,
  "dcAcRatio": 1.105263,
  "errorCount": 0,
  "interconnectionPass": true,
  "isValid": true,
  "microDeviceCount": 0,
  "panelsPerString": 10,
  "rooftopTempAdderC": 30,
  "stringCount": 2,
  "topology": "STRING_INVERTER",
  "totalAcKw": 7.6,
  "totalDcKw": 8.4,
  "totalPanels": 20,
}
`;

exports[`Wave 0 golden — computeSystem legacy STRING (7.6 kW Fronius, 2×10, roof) > per-run {id, gauge, lengthFt, conductors} matches the pre-contract snapshot 1`] = `
[
  {
    "conductors": 4,
    "gauge": "#10 AWG",
    "id": "DC_STRING_RUN",
    "lengthFt": 50,
  },
  {
    "conductors": 4,
    "gauge": "#10 AWG",
    "id": "DC_DISCO_TO_INV_RUN",
    "lengthFt": 10,
  },
  {
    "conductors": 2,
    "gauge": "#8 AWG",
    "id": "INV_TO_DISCO_RUN",
    "lengthFt": 20,
  },
  {
    "conductors": 3,
    "gauge": "#8 AWG",
    "id": "DISCO_TO_METER_RUN",
    "lengthFt": 15,
  },
  {
    "conductors": 3,
    "gauge": "#2/0 AWG",
    "id": "MSP_TO_UTILITY_RUN",
    "lengthFt": 5,
  },
]
`;

exports[`Wave 0 golden — computeSystem legacy STRING (7.6 kW Fronius, 2×10, roof) > runs[] id set is the bare legacy set (no subsystem prefixes) 1`] = `
[
  "DC_STRING_RUN",
  "DC_DISCO_TO_INV_RUN",
  "INV_TO_DISCO_RUN",
  "DISCO_TO_METER_RUN",
  "MSP_TO_UTILITY_RUN",
]
`;
